- added length and height validation to Comments - added length and height validation to Approved Items - updated textarea styling to support word-wrapping - cleaned up validation code - removed red X from invalid textarea - fixed is-invalid style for valid-from-to inputs

--- a/embc-app/ClientApp/src/app/volunteer/components/lodging-referral/lodging-referral.component.scss
+++ b/embc-app/ClientApp/src/app/volunteer/components/lodging-referral/lodging-referral.component.scss
@@ -2,7 +2,16 @@ app-valid-from-to {
   width: 75%;
 }
 
+// for Comments
 textarea {
   resize: none;
   overflow: hidden;
+  font-family: monospace;
+  font-size: 14px;
+  line-height: 2rem;
+  word-break: break-word;
+  padding: 0.5rem 1rem !important; // don't allow 'is-invalid' styling to override
+  border-width: 1px;
+  width: calc(50ch + 2rem + 2px); // 50 cols + padding + border
+  height: calc(7em + 1rem + 2px); // 5 rows + padding + border
 }
