--- a/embc-app/ClientApp/src/styles.scss
+++ b/embc-app/ClientApp/src/styles.scss
@@ -138,6 +138,10 @@ select.is-invalid {
   background-image: none !important; // remove red X
 }
 
+textarea.is-invalid {
+  background-image: none !important; // remove red X
+}
+
 .form-control {
   // border-radius: 5px;
   display: inline-block;
